# quark-plasma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quark-plasma.sln  quark-plasma.vcxproj  quark-plasma.vcxproj.filters
VisualStudio/: quark-plasma.vcxproj  quark-plasma.vcxproj.filters
VisualStudio/bullet-2.81/lib/: BulletDynamics_vs2010_debug.lib  BulletSoftBody_vs2010_debug.lib  LinearMath_vs2010_debug.lib
cmake/Modules/: FindBullet.cmake
include/: Application.h  Bullet.h
src/: Application.cpp  Bullet.cpp  main.cpp
